--- a/TutoQueenOrTools.ipynb
+++ b/TutoQueenOrTools.ipynb
@@ -20,7 +20,7 @@
         "colab_type": "text"
       },
       "source": [
-        "Si vous voulez faire tourner le code éxecuter cette commande :"
+        "Si vous voulez faire tourner le code exécuter cette commande :"
       ]
     },
     {
