--- a/TutoQueenOrTools.ipynb
+++ b/TutoQueenOrTools.ipynb
@@ -63,7 +63,7 @@
         "Réessayez d'installer ortools.\n",
         "\n",
         "*   Il se peut que vous ayez une version 32-bits de python, pour vérifier ouvrez un terminal :\n",
-        "  *   Ouvrez un interpréteur python avec la commande : `py`\n",
+        "  *   Ouvrez un interpréteur python avec la commande : `python`\n",
         "  *   Importez le module struct : `import struct`\n",
         "  *   Tapez la ligne : `print(struct.calcsize(\"P\")*8`\n",
         "  64 --> votre version supporte ortools.\n",
