Correct some typos

--- a/TutoQueenOrTools.ipynb
+++ b/TutoQueenOrTools.ipynb
@@ -28,13 +28,52 @@
       "metadata": {
         "id": "J-tZgJGyyPMd",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 323
+        },
+        "outputId": "7d4af815-e0ff-4ad4-809b-4bcb06fda563"
       },
       "source": [
         "!pip install ortools"
       ],
-      "execution_count": 0,
-      "outputs": []
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Collecting ortools\n",
+            "\u001b[?25l  Downloading https://files.pythonhosted.org/packages/1c/d5/c4382df6b6b978971f11287552f5c0acc54ea7bf8ce70a9c77d8a06531b2/ortools-7.6.7691-cp36-cp36m-manylinux1_x86_64.whl (28.9MB)\n",
+            "\u001b[K     |████████████████████████████████| 28.9MB 144kB/s \n",
+            "\u001b[?25hCollecting protobuf>=3.11.2\n",
+            "\u001b[?25l  Downloading https://files.pythonhosted.org/packages/28/05/9867ef8eafd12265267bee138fa2c46ebf34a276ea4cbe184cba4c606e8b/protobuf-3.12.2-cp36-cp36m-manylinux1_x86_64.whl (1.3MB)\n",
+            "\u001b[K     |████████████████████████████████| 1.3MB 48.0MB/s \n",
+            "\u001b[?25hRequirement already satisfied: six>=1.10 in /usr/local/lib/python3.6/dist-packages (from ortools) (1.12.0)\n",
+            "Requirement already satisfied: setuptools in /usr/local/lib/python3.6/dist-packages (from protobuf>=3.11.2->ortools) (47.1.1)\n",
+            "Installing collected packages: protobuf, ortools\n",
+            "  Found existing installation: protobuf 3.10.0\n",
+            "    Uninstalling protobuf-3.10.0:\n",
+            "      Successfully uninstalled protobuf-3.10.0\n",
+            "Successfully installed ortools-7.6.7691 protobuf-3.12.2\n"
+          ],
+          "name": "stdout"
+        },
+        {
+          "output_type": "display_data",
+          "data": {
+            "application/vnd.colab-display-data+json": {
+              "pip_warning": {
+                "packages": [
+                  "google"
+                ]
+              }
+            }
+          },
+          "metadata": {
+            "tags": []
+          }
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -63,11 +102,11 @@
         "Réessayez d'installer ortools.\n",
         "\n",
         "*   Il se peut que vous ayez une version 32-bits de python, pour vérifier ouvrez un terminal :\n",
-        "  *   Ouvrez un interpréteur python avec la commande : `py`\n",
+        "  *   Ouvrez un interpréteur python avec la commande : `python`\n",
         "  *   Importez le module struct : `import struct`\n",
-        "  *   Tapez la ligne : `print(struct.calcsize(\"P\")*8`\n",
-        "  64 --> votre version supporte ortools.\n",
-        "  32 --> votre version ne supporte pas ortools, il faut passer à la version 64 bits.\n",
+        "  *   Tapez la ligne : `print(struct.calcsize(\"P\")*8`  \n",
+        "      * 64 --> votre version supporte ortools.\n",
+        "      * 32 --> votre version ne supporte pas ortools, il faut passer à la version 64 bits.\n",
         "\n",
         "Pour passer à la version 64 bits suivez les étapes suivantes (je précise encore une fois je ne pense pas que cela s'applique si vous utilisez anaconda) :\n",
         "*   Désinstallez Python (Touche Windows -> Cherchez 'Applications et fonctionnalités' --> Python --> Désinstaller)\n",
@@ -159,11 +198,11 @@
       "metadata": {
         "id": "iD7pN5Xd1tqD",
         "colab_type": "code",
+        "outputId": "6ade192e-b6bc-42d4-fd1a-2a87cf94d6b5",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 164
-        },
-        "outputId": "65df3856-3402-44f9-97e3-de5dd89b4bd1"
+          "height": 153
+        }
       },
       "source": [
         "plateau = [[monModel.NewIntVar(0,7,f'Reine : {k} : i'),monModel.NewIntVar(0,7,f'Reine : {k} : j')] for k in range(8)]\n",
@@ -199,7 +238,7 @@
         "colab_type": "text"
       },
       "source": [
-        "Si vous avez exécuté le code ci-dessus vous verrez que l'on a bien 8 liste de deux valaurs qui peuvent prendre des valeurs entre 0 et 7."
+        "Si vous avez exécuté le code ci-dessus vous verrez que l'on a bien 8 list de deux valeurs qui peuvent prendre des valeurs entre 0 et 7."
       ]
     },
     {
@@ -226,7 +265,7 @@
         "\n",
         "\n",
         "*   Que toutes les coordonnées lignes et colonnes soient différentes. (Contraintes horizontales)\n",
-        "*  Que la différence `i-k` et `|j-z|` des coordonnées `(i,j)` et `(k,z)` ne soit pas égale (Contraintes diagonales)\n",
+        "*  Que la différence `|i-k|` et `|j-z|` des coordonnées `(i,j)` et `(k,z)` ne soit pas égale (Contraintes diagonales)\n",
         "\n"
       ]
     },
@@ -243,8 +282,6 @@
         "row = [plateau[i][1] for i in range(8)]\n",
         "monModel.AddAllDifferent(col)\n",
         "monModel.AddAllDifferent(row)\n",
-        "\n",
-        "\n",
         "\n",
         "\n",
         "#Contraintes diagonales\n",
@@ -295,11 +332,11 @@
       "metadata": {
         "id": "6yhpwvSCDYNZ",
         "colab_type": "code",
+        "outputId": "7ad2f3f4-fd28-4b36-dfd4-a5ab42563afa",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 35
-        },
-        "outputId": "c0ce343a-eae4-4484-9ce0-a448ea392d2b"
+          "height": 34
+        }
       },
       "source": [
         "results = []\n",
@@ -310,7 +347,7 @@
         "  print('Problème non résolvable')\n",
         "print(results)"
       ],
-      "execution_count": 7,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "stream",
@@ -336,11 +373,11 @@
       "metadata": {
         "id": "GUl_P94sTbII",
         "colab_type": "code",
+        "outputId": "0c082727-44ce-4412-86bb-f6a449dbfc48",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 164
-        },
-        "outputId": "5fe3655d-d1e8-4c65-cdb6-089f56cf23ae"
+          "height": 153
+        }
       },
       "source": [
         "if results:\n",
@@ -352,7 +389,7 @@
         "        print('0',end=' ')\n",
         "    print()"
       ],
-      "execution_count": 8,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "stream",
